# bingo

./: .gitignore  README.md  pyproject.toml
bingo/: bingo.py  cli.py  style.py
